// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csf-parameters story propery name 1`] = `
Object {
  "components": Object {},
  "kinds": Object {},
  "stories": Object {
    "myStory": Object {
      "arguments": Array [],
      "attributes": Object {
        "name": "Custom story name",
      },
      "loc": Object {
        "end": Object {
          "column": 31,
          "line": 1,
        },
        "start": Object {
          "column": 23,
          "line": 1,
        },
      },
      "name": "Custom story name",
      "source": "() => {}",
    },
  },
}
`;

exports[`csf-parameters story propery name and parameters 1`] = `
Object {
  "components": Object {
    "ControlsTable": Object {
      "name": "ControlsTable",
    },
  },
  "kinds": Object {},
  "stories": Object {
    "myStory": Object {
      "arguments": Array [],
      "attributes": Object {
        "name": "Custom story name",
        "parameters": Object {
          "addonControls": Object {
            "smart": false,
          },
          "component": "ControlsTable",
        },
      },
      "component": "ControlsTable",
      "loc": Object {
        "end": Object {
          "column": 31,
          "line": 1,
        },
        "start": Object {
          "column": 23,
          "line": 1,
        },
      },
      "name": "Custom story name",
      "source": "() => {}",
    },
  },
}
`;

exports[`csf-parameters story propery name parameters and controls 1`] = `
Object {
  "components": Object {},
  "kinds": Object {},
  "stories": Object {
    "myStory": Object {
      "arguments": Array [],
      "attributes": Object {
        "name": "Custom story name",
        "parameters": Object {
          "addonControls": Object {
            "smart": false,
          },
          "controls": Object {
            "name": Object {
              "label": "Name",
              "order": 9999,
              "type": "ControlTypes.TEXT",
              "value": "Mark",
            },
          },
        },
      },
      "loc": Object {
        "end": Object {
          "column": 31,
          "line": 1,
        },
        "start": Object {
          "column": 23,
          "line": 1,
        },
      },
      "name": "Custom story name",
      "source": "() => {}",
    },
  },
}
`;
